# pure-core

./: CMakeLists.txt  README.md
arch/: CMakeLists.txt
arch/imx/: CMakeLists.txt
arch/imx/rt1051/: CMakeLists.txt  boot_reason.c
include/hal/: boot_control.h  boot_reason.h
src/: boot_control.c  boot_reason.c
src/common/: json.c  json.h
tests/: CMakeLists.txt  boot_control.cpp  boot_reason.cpp
